# v3.9.2:
  * Add `-z` option: `--enable-tty-signals`.
  * Fix devpts mount.
# v3.9.1:
  * Support prefix for errno action in `--deny-syscall` option.
  * Add `-Q` option: `--mask-path`.
  * Load ruri from memfd to avoid leak of ruri binary.
# v3.9.0:
  * Support part of bsd-style command-line usage.
  * Fix built-in seccomp profile.
  * Add `-X` option: `--deny-syscall`.
  * Add `-J` option: `--join-ns`.
  * Add `-O` option: `--oom-score-adj`.
  * Fix binfmt_misc for rootless container.
  * Support mount flags as prefix of source.
  * Support tmpfs and overlayfs as mount source.
  * Unset all environment variables before running container.
  * Fix: drop CAP_SYS_CHROOT to avoid escape.
# v3.8:
  * Support more platforms, currently supports: arm64, armv7, armhf, riscv64, i386, loong64, s390x, ppc64le and x86_64.
  * Improve rootless container support.
  * Add `-W` option: `--work-dir`.
  * Add `-A` option: `--unmask-dirs`.
  * Add `-E` option: `--user`.
  * Add `-t` option: `--hostname`.
  * Add `-F` option: `--ruri-fetch`.
  * Add `-x` option: `--disable-network`.
  * Add `-C` option: `--correct-config`.
  * Add `-K` option: `--use-kvm`.
  * Add `-I` option: `--char-dev`.
  * Add `-i` option: `--hide-pid`.
  * Add `-T` option: `--timens-offset`.
  * Add `-b` option: `--background`.
  * Add `-L` option: `--log-file`.
  * `-c` option can now recognize other args and command to run.
  * `-U` and `-P` option can now use config file.
  * Rewrite cgroup support, add cpupercent limit support.
  * Change MAX_MOUNTPOINTS AND MAX_ENVS from 128*2 to 512*2.
  * Auto kill all processes in container when umounting container.
  * We will always mount / as the first mountpoint.
  * Set the size limit of /dev/shm when memory limit is set.
  * Fix crash on capget().
  * Fix pivot_root does not work.
  * Fix unshare container when pivot_root failed.
  * Enable unshare if detected ns_pid is ruri.
  * Correct ns_pid for unshare container when exec command in container again.